--- a/index.html
+++ b/index.html
@@ -42,6 +42,20 @@
                 <img src="images/main-camera.png" alt="">
             </div>
         </article>
+        <div class="logos">
+            <hr>
+            <div class="logo">
+                <img src="logos/Alibaba.svg" alt="">
+                <img src="logos/Amazon.svg" alt="">
+                <img src="logos/Daraz.pk Logo.svg" alt="">
+                <img src="logos/Ebay.svg" alt="">
+                <img src="logos/Rakuten.svg" alt="">
+                <img src="logos/Walmart.svg" alt="">
+                <img src="logos/Target.svg" alt="">
+            </div>
+            <hr>
+        </div>
+
     </main>
 </body>
 
