--- a/index.html
+++ b/index.html
@@ -55,7 +55,143 @@
             </div>
             <hr>
         </div>
-
+        <div class="content">
+            <div>
+                <h3>Popular Collection</h3>
+            </div>
+            <div class="cards">
+                <div class="card">
+                    <img src="images/imge-1.png" alt="">
+                    <h3>item-name 1</h3>
+                    <h4>price</h4>
+                    <div class="rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star-half-stroke"></i>
+                        <span>4.9</span>
+                    </div>
+                    <p>Wordwide shifting <br> available <br> Buyers protection possible</p>
+                </div>
+                <div class="card">
+                    <img src="images/imge-2.png" alt="">
+                    <h3>item-name 2</h3>
+                    <h4>price</h4>
+                    <div class="rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star-half-stroke"></i>
+                        <span>4.9</span>
+                    </div>
+                    <p>Wordwide shifting <br> available <br> Buyers protection possible</p>
+                </div>
+                <div class="card">
+                    <img src="images/imge-3.png" alt="">
+                    <h3>item-name 3</h3>
+                    <h4>price</h4>
+                    <div class="rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star-half-stroke"></i>
+                        <span>4.9</span>
+                    </div>
+                    <p>Wordwide shifting <br> available <br> Buyers protection possible</p>
+                </div>
+                <div class="card">
+                    <img src="images/imge-4.png" alt="">
+                    <h3>item-name 4</h3>
+                    <h4>price</h4>
+                    <div class="rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star-half-stroke"></i>
+                        <span>4.9</span>
+                    </div>
+                    <p>Wordwide shifting <br> available <br> Buyers protection possible</p>
+                </div>
+                <div class="card">
+                    <img src="images/imge-5.png" alt="">
+                    <h3>item-name 5</h3>
+                    <h4>price</h4>
+                    <div class="rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star-half-stroke"></i>
+                        <span>4.9</span>
+                    </div>
+                    <p>Wordwide shifting <br> available <br> Buyers protection possible</p>
+                </div>
+                <div class="card">
+                    <img src="images/imge-6.png" alt="">
+                    <h3>item-name 6</h3>
+                    <h4>price</h4>
+                    <div class="rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star-half-stroke"></i>
+                        <span>4.9</span>
+                    </div>
+                    <p>Wordwide shifting <br> available <br> Buyers protection possible</p>
+                </div>
+                <div class="card">
+                    <img src="images/imge-7.png" alt="">
+                    <h3>item-name 7</h3>
+                    <h4>price</h4>
+                    <div class="rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star-half-stroke"></i>
+                        <span>4.9</span>
+                    </div>
+                    <p>Wordwide shifting <br> available <br> Buyers protection possible</p>
+                </div>
+                <div class="card">
+                    <img src="images/imge-8.png" alt="">
+                    <h3>item-name 8</h3>
+                    <h4>price</h4>
+                    <div class="rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star-half-stroke"></i>
+                        <span>4.9</span>
+                    </div>
+                    <p>Wordwide shifting <br> available <br> Buyers protection possible</p>
+                </div>
+                <div class="card">
+                    <img src="images/imge-9.png" alt="">
+                    <h3>item-name 9</h3>
+                    <h4>price</h4>
+                    <div class="rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star-half-stroke"></i>
+                        <span>4.9</span>
+                    </div>
+                    <p>Wordwide shifting <br> available <br> Buyers protection possible</p>
+                </div>
+            </div>
+        </div>
+        <div class="see-more">
+            <p>See More</p>
+            <i class="fa-solid fa-arrow-right"></i>
+        </div>
     </main>
 </body>
 
