third section complect

--- a/index.html
+++ b/index.html
@@ -192,6 +192,27 @@
             <p>See More</p>
             <i class="fa-solid fa-arrow-right"></i>
         </div>
+        <section>
+            <div class="feathur-product">
+                <div class="gear">
+                    <img src="images/gear.png" alt="">
+                </div>
+                <div class="gear-info">
+                    <h2>Featured products at one place</h2>
+                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                        duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+
+                    <button class="join">
+                        Join now
+                        <spa class="right-arrow"><i class="fa-solid fa-arrow-right"></i></span>
+                    </button>
+                    <div>
+
+
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
