--- a/index.html
+++ b/index.html
@@ -214,6 +214,16 @@
             </div>
         </section>
     </main>
+    <footer>
+        <h2>Influencer products</h2>
+        <p>Copyright © 2020 influencer products <br> All rights reserved</p>
+        <div class="social-media">
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            <a href="#"><i class="fa-brands fa-youtube"></i></a>
+        </div>
+    </footer>
 </body>
 
 </html>
