--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
                 <a href=""><i class="fa-solid fa-magnifying-glass"></i></a>
                 <a href=""><i class="fa-solid fa-cart-plus"></i></a>
             </div>
+            <div class="right-bar-two">
+                <a href="#"><i class="fa-solid fa-cart-plus"></i></a>
+                <a href="#"><i class="fa-solid fa-bars"></i></a>
+            </div>
         </nav>
     </header>
     <main>
@@ -39,7 +43,8 @@
                 </div>
             </div>
             <div class="main-images">
-                <img src="images/main-camera.png" alt="">
+                <img id="circle1" src="images/main-camera.png" alt="">
+                <img id="circle" src="images/Circle design.svg" alt="">
             </div>
         </article>
         <div class="logos">
